[package]
name = "sockethook"
version = "0.1.0"
authors = ["Perfect Makanju <developer@perfects.engineering>"]
edition = "2018"
license = "MIT"
description = "A Webhook-to-WebSocket proxy in Rust"
readme = "Readme.md"
homepage = "https://github.com/perfectmak/sockethook-rust"
repository = "https://github.com/perfectmak/sockethook-rust"
keywords = ["cli", "proxy", "websocket"]
categories = ["command-line-utilities"]

[dependencies]
actix = "0.8.3"
actix-codec = "0.1.2"
actix-web = "1.0.8"
actix-web-actors = "1.0.2"
actix-cors = "0.1.0"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
uuid = { version = "0.8.1", features = ["v4"] }
ctrlc = "3.1.3"
structopt = "0.3.3"
redis = "0.13.0"